# CWraPPer

./: CMakeLists.txt  README.md  buildMainCpp.sh
src/: Namespaces.cpp  Namespaces.hpp  PreprocessorAction.cpp  PreprocessorAction.hpp  main.cpp  utils.cpp  utils.hpp
src/matcher/: FunctionDefinition.cpp  FunctionDefinition.hpp  NamespaceDefinition.cpp  NamespaceDefinition.hpp  TypeDefinition.cpp  TypeDefinition.hpp  VariableDefinition.cpp  VariableDefinition.hpp
